# mulligan

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: pull_request.yaml
examples/: exponential.rs  hello_world.rs  maps.rs
src/: backoff.rs  jitter.rs  lib.rs
src/strategy/: exponential.rs  mod.rs
