[package]
name = "mulligan"
version = "0.2.0"
edition = "2021"
description = "A flexible retry library for Rust async operations with configurable backoff strategies and jitter."
license = "MIT"
homepage = "https://github.com/theelderbeever/mulligan"
repository = "https://github.com/theelderbeever/mulligan"
documentation = "https://docs.rs/mulligan"

[features]
default = ["tokio"]  # Make tokio the default runtime
tokio = ["dep:tokio"]  # Depend on tokio when this feature is enabled
async-std = ["dep:async-std"]  # Depend on async-std when this feature is enabled

[dependencies]
tokio = { version = "1", optional = true, features = ["time","rt"] }
async-std = { version = "1", optional = true }
rand = { version = "0.8"}

[[example]]
name = "hello_world"
required-features = ["tokio"]

[example.hello_world.dependencies]
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"]}
